reviews/4.1.0-rc.3/missingShacl/missingPropsSummaryCounts.md

# Missing SHACL properties

The following is a comparison between the SHACL properties generated by Model2Owl with the properties expressed in the eAP (Enterprise architect) file.

## Model

```json
{
  "owner": "OP-TED",
  "repo": "ePO",
  "branch": "feature/4.1.0-rc.3",
  "localPath": "assets/ePO/feature/4.1.0-rc.3",
  "databasePath": "assets/ePO/feature/4.1.0-rc.3/analysis_and_design/conceptual_model/ePO_CM.eap"
}
```

## Files

- assets/ePO/feature/4.1.0-rc.3/implementation/eSubmission/shacl_shapes/eSubmission_shapes.ttl
- assets/ePO/feature/4.1.0-rc.3/implementation/eNotice/shacl_shapes/eNotice_shapes.ttl
- assets/ePO/feature/4.1.0-rc.3/implementation/ePO_core/shacl_shapes/ePO_core_shapes.ttl
- assets/ePO/feature/4.1.0-rc.3/implementation/eFulfilment/shacl_shapes/eFulfilment_shapes.ttl
- assets/ePO/feature/4.1.0-rc.3/implementation/eOrdering/shacl_shapes/eOrdering_shapes.ttl
- assets/ePO/feature/4.1.0-rc.3/implementation/eContract/shacl_shapes/eContract_shapes.ttl
- assets/ePO/feature/4.1.0-rc.3/implementation/eCatalogue/shacl_shapes/eCatalogue_shapes.ttl
- assets/ePO/feature/4.1.0-rc.3/implementation/eAccess/shacl_shapes/eAccess_shapes.ttl

## SHACL - Property shapes per class

- Model2Owl: Number of property shapes produced from XMI with Model2Owl 
- EAP: Number of property shapes produced directly from the EAP file
- [details.json](./details.json)

| Class | Model2Owl | EAP | Mismatch |
|-------|--------|----------|--------|
|epo:RequestForClarification|0|0|
|epo-sub:ESPD|1|3|X
|epo:ExpressionOfInterest|0|0|
|epo:RequestForParticipation|0|0|
|epo:Estimate|0|0|
|epo:SubcontractingEstimate|4|4|
|epo:ConcessionEstimate|4|4|
|epo-ord:Originator|0|0|
|epo-ful:Carrier|0|0|
|epo-ord:OrderResponse|5|7|X
|epo:AwardOutcome|5|5|
|epo:AccessTerm|11|11|
|epo:AwardCriterion|4|4|
|epo:AwardDecision|3|3|
|epo:Business|3|3|
|epo:Buyer|7|7|
|epo:LotSpecificTerm|0|0|
|epo:CentralPurchasingBody|0|0|
|epo:Contract|13|15|X
|epo:Contractor|1|1|
|epo:ContractTerm|22|22|
|epo:DesignContestRegimeTerm|6|6|
|epo:DirectAwardTerm|4|4|
|epo:Document|16|16|
|epo:DynamicPurchaseSystemTechnique|1|1|
|epo:EAuctionTechnique|0|0|
|epo:OfferingParty|0|0|
|epo:AcquiringCentralPurchasingBody|0|0|
|epo:ReviewRequester|0|0|
|epo-ful:DespatchAdvice|7|11|X
|epo-not:PreMarketConsultationNotice|0|1|X
|epo:EvaluationTerm|0|0|
|epo:ExclusionGround|0|0|
|epo:FrameworkAgreement|1|1|
|epo:FrameworkAgreementTechnique|0|0|
|epo:FrameworkAgreementTerm|4|4|
|epo:Fund|5|5|
|epo:GreenProcurement|3|3|
|epo:CatalogueReceiver|0|0|
|epo:CatalogueProvider|0|0|
|epo:AwardingCentralPurchasingBody|0|0|
|epo:ContractLotCompletionInformation|5|5|
|epo:InnovativeProcurement|1|1|
|epo:Lot|2|2|
|epo:LotGroup|8|8|
|epo:Mediator|0|0|
|epo:MultipleStageProcedureTerm|8|8|
|epo:Notice|14|14|
|epo:OpeningTerm|4|4|
|epo:OrganisationGroup|3|3|
|epo:VehicleInformation|6|6|
|epo:NonPublishedInformation|5|5|
|epo-con:ContractModificationInformation|3|5|X
|epo-con:ContractAmendment|0|2|X
|epo:Period|3|3|
|epo:PlannedProcurementPart|4|4|
|epo:SelectionEvaluationTerm|0|0|
|epo:AwardEvaluationTerm|5|5|
|epo:ReviewTerm|5|5|
|epo-ord:OrderResponseInformation|2|3|X
|epo-cat:PostAwardDocument|1|2|X
|epo:Prize|2|2|
|epo:Procedure|12|12|
|epo-cat:Catalogue|3|9|X
|epo:ParticipationRequestTerm|2|2|
|epo-not:VoluntaryEx-AnteTransparencyNotice|0|1|X
|epo-not:PIN-CFCStandardNotice|0|1|X
|epo-not:PIN-CFCSocialNotice|0|1|X
|epo-not:QSNotice|0|1|X
|epo-not:CNStandardNotice|0|1|X
|epo-not:CNSocialNotice|0|1|X
|epo-not:DesignContestNotice|0|1|X
|epo-not:CANStandardNotice|0|1|X
|epo:ProcedureTerm|13|13|
|epo:ProcurementCriterion|5|5|
|epo:TenderGroup|6|6|
|epo:Duration|0|0|
|epo-ord:Consignee|0|0|
|epo:ProcurementDocument|0|0|
|epo:ProcurementServiceProvider|1|1|
|epo-cat:CatalogueLine|12|16|X
|epo:ProcedureSpecificTerm|0|0|
|epo-cat:ItemRequirement|0|0|
|epo:NonDisclosureAgreementTerm|2|2|
|epo:PurchaseContract|2|2|
|epo:Purpose|3|3|
|epo:Reviewer|1|1|
|epo:Offer|0|0|
|epo:SecurityClearanceTerm|3|3|
|epo:SelectionCriterion|3|3|
|epo:SocialProcurement|1|1|
|epo:StatisticalInformation|0|0|
|epo:StrategicProcurement|3|3|
|epo:Subcontractor|0|0|
|epo:SubcontractTerm|7|7|
|epo:SubmissionTerm|24|24|
|epo:System|2|2|
|epo:TechnicalSpecification|0|0|
|epo:Technique|3|3|
|epo:Tenderer|1|1|
|epo:Tender|11|12|X
|epo:MonetaryValue|5|5|
|epo:Winner|1|1|
|epo-cat:Item|20|29|X
|epo:JuryMember|1|1|
|epo:ProcurementProcedureInformationProvider|0|0|
|epo-not:PlanningNotice|0|2|X
|epo-not:CompetitionNotice|0|4|X
|epo:Quantity|3|3|
|epo-not:DirectAwardPrenotificationNotice|0|8|X
|epo-not:ResultNotice|0|9|X
|epo-not:ContractModificationNotice|0|10|X
|epo-not:CompletionNotice|0|11|X
|epo-cat:Price|2|10|X
|epo-ful:Despatcher|0|0|
|epo-ord:Seller|0|0|
|epo-not:PINProfileNotice|0|1|X
|epo-not:PINOnlyNotice|0|1|X
|epo-not:PINTimeLimitNotice|0|1|X
|epo-ful:ShipmentInformation|3|7|X
|epo:OriginatorRequest|0|0|
|epo-not:CANSocialNotice|0|1|X
|epo-not:DesignContestResultNotice|0|1|X
|epo-not:Notice10|0|2|X
|epo-not:Notice11|0|2|X
|epo-ful:TransportHandlingUnit|5|5|
|epo-not:Notice25|0|2|X
|epo-not:Notice26|0|2|X
|epo-not:Notice27|0|2|X
|epo-not:Notice28|0|2|X
|epo-not:Notice29|0|2|X
|epo-not:Notice30|0|2|X
|epo-not:Notice31|0|2|X
|epo-not:Notice32|0|2|X
|epo-not:Notice33|0|2|X
|epo-not:Notice34|0|2|X
|epo-not:Notice35|0|2|X
|epo-not:Notice36|0|2|X
|epo-not:Notice37|0|2|X
|epo-not:Notice12|0|2|X
|epo-not:Notice13|0|2|X
|epo-not:Notice14|0|2|X
|epo-not:Notice15|0|2|X
|epo-not:Notice16|0|2|X
|epo-not:Notice17|0|2|X
|epo-not:Notice18|0|2|X
|epo-not:Notice19|0|2|X
|epo-not:Notice20|0|2|X
|epo-not:Notice21|0|2|X
|epo-not:Notice22|0|2|X
|epo-not:Notice23|0|2|X
|epo-not:Notice24|0|2|X
|epo-not:Notice38|0|2|X
|epo-not:Notice39|0|2|X
|epo-not:Notice40|0|2|X
|epo-not:Notice1|0|2|X
|epo-not:Notice2|0|2|X
|epo-not:Notice3|0|2|X
|epo-not:Notice4|0|2|X
|epo-not:Notice5|0|2|X
|epo-not:Notice6|0|2|X
|epo-not:Notice7|0|2|X
|epo-not:Notice8|0|2|X
|epo-not:Notice9|0|2|X
|epo-not:VEAT-D24|0|2|X
|epo-not:Modification-D24|0|2|X
|epo-not:SocialAndOtherSpecificServices-D24|0|2|X
|epo-not:PINOnly-D25|0|2|X
|epo-not:CNSocial-D25|0|2|X
|epo-not:CANSocial-D25|0|2|X
|epo-not:QS-D25|0|2|X
|epo-not:PINProfile-D25|0|2|X
|epo-not:DesignContest-D25|0|2|X
|epo-not:DesignContestResult-D25|0|2|X
|epo-not:VEAT-D25|0|2|X
|epo-not:StandardForm|0|0|
|epo-not:eFormsNotice|0|1|X
|epo:PaymentExecutor|0|0|
|epo:BudgetProvider|0|0|
|epo:ParticipationRequestProcessor|0|0|
|epo:ParticipationRequestReceiver|0|0|
|epo:TenderReceiver|0|0|
|epo:TenderProcessor|0|0|
|epo:OfflineAccessProvider|0|0|
|epo:ReviewProcedureInformationProvider|0|0|
|epo-ful:DespatchLine|1|5|X
|epo-not:Modification-D25|0|2|X
|epo-not:PIN-CFCSocialNotice-D25|0|2|X
|epo-not:PIN-RTL-D24|0|2|X
|epo-not:PIN-CFCStandard-D24|0|2|X
|epo-not:PIN-RTL-D25|0|2|X
|epo-not:PIN-CFCSocial-D25|0|2|X
|epo-not:VEAT-D23|0|2|X
|epo-not:Modification-D23|0|2|X
|epo-not:SocialAndOtherSpecificServices-D23|0|2|X
|epo-not:ConcessionNotice-D23|0|2|X
|epo-not:ConcessionAwardNotice-D23|0|2|X
|epo-not:PINOnly-D24|0|2|X
|epo-not:CNStandard-D24|0|2|X
|epo-not:CANStandard-D24|0|2|X
|epo-not:PINProfile-D24|0|2|X
|epo-not:DesignContest-D24|0|2|X
|epo-not:DesignContestResult-D24|0|2|X
|epo:Term|0|0|
|epo:TenderAwardOutcome|3|3|
|epo:LotAwardOutcome|5|5|
|epo:ReviewRequestSummary|3|3|
|epo:LotGroupAwardInformation|2|2|
|epo:NoticeAwardInformation|5|7|X
|epo:ReviewDecision|6|6|
|epo-cat:ProductSpecification|0|0|
|epo:AgentInRole|6|6|
|epo:TaxInformationProvider|0|0|
|epo:EmploymentInformationProvider|0|0|
|epo:EnvironmentalProtectionInformationProvider|0|0|
|epo:Awarder|0|0|
|epo:ReviewRequest|8|8|
|epo:SubmissionStatisticalInformation|22|22|
|epo-not:PINProfile-D81|0|2|X
|epo-not:VEAT-D81|0|2|X
|epo-not:PINDefence-D81|0|2|X
|epo-not:CNDefence-D81|0|2|X
|epo-not:CANDefence-D81|0|2|X
|epo-not:Subcontract-D81|0|2|X
|epo-not:StandardFormsNotice|0|1|X
|epo-not:SubcontractNotice|0|1|X
|epo-cat:ItemComposition|0|0|
|epo-cat:ItemProperty|4|5|X
|epo:ProcurementObject|16|16|
|epo-ord:OrderLine|0|3|X
|epo-ord:AllowanceInformation|1|1|
|epo-ord:AllowanceChargeInformation|3|6|X
|epo-cat:Manufacturer|0|1|X
|epo:ContextDescription|0|0|
|epo:ContextualProjection|0|0|
|epo-cat:Batch|4|5|X
|epo-cat:Brand|1|1|
|epo-cat:ItemModel|1|1|
|epo-not:QSNotice-D25|0|2|X
|epo-not:CNSocialNotice-D25|0|2|X
|epo-not:CANSocialNotice-D25|0|2|X
|epo-acc:ESPDRequest|0|3|X
|epo:ChangeInformation|9|9|
|epo:ReviewObject|3|3|
|epo:ReviewIrregularitySummary|2|2|
|epo-ful:ReceiptAdvice|4|8|X
|epo-ful:ReceiptAdviceLine|4|8|X
|epo-cat:ItemReplacement|0|0|
|epo-sub:NationalPreQualificationData|1|5|X
|epo-sub:Response|1|5|X
|epo-cat:CatalogueResponse|3|5|X
|epo-cat:CatalogueResponseLine|1|2|X
|epo-cat:CatalogueResponseInformation|1|2|X
|epo:ContractSpecificTerm|0|0|
|epo:ConcessionContract|0|0|
|epo:ProcessPlanningTerm|3|3|
|epo-cat:ItemRelation|2|2|
|epo-cat:ItemAccessoryRelation|0|0|
|epo-cat:ItemComplementaryRelation|0|0|
|epo:ProcurementProcessInformation|5|5|
|epo:CertificationLabel|2|2|
|epo:Certifier|0|0|
|epo:Certificate|3|3|
|epo-cat:ChargeInformation|0|1|X
|epo-ord:DeliveryInformation|6|9|X
|epo:AcquiringParty|0|0|
|epo:AuxiliaryParty|0|0|
|epo:OtherEntity|0|0|
|epo:SpecificDuration|2|2|
|epo:IndefiniteDuration|0|0|
|epo-ord:OrderResponseLine|1|1|
|epo:ProcurementElement|6|6|
|epo:LeadBuyer|0|0|
|epo-ord:ContractInformation|1|2|X
|epo-ord:OriginatorInformation|2|3|X
|epo-ord:DeliveryAgreement|1|2|X
|epo:DirectContract|1|1|
|epo:AwardCriteriaSummary|0|0|
|epo-ful:Consignment|15|30|X
|epo-ful:FreightForwarder|0|0|
|epo-ful:Notifier|0|0|
|epo-ful:TransportEquipment|7|8|X
|epo-ful:Package|4|4|
|epo-ful:ShipmentStage|5|6|X
|epo-ful:TransportMeans|3|5|X
|epo-ful:TransportEquipmentSeal|0|1|X
|epo-ful:ShipmentAgreement|0|2|X
|epo:OfferIssuer|1|1|
|epo-cat:Line|2|3|X
|epo-cat:InformationHub|1|1|
|epo:ParticipationCondition|1|1|
|epo:ProcurementCriteriaSummary|1|1|
|epo:ParticipationConditionsSummary|3|3|
|epo:ExclusionGroundsSummary|0|0|
|epo:SelectionCriteriaSummary|2|2|
|epo-ful:GoodsItem|1|3|X
|epo-ord:TaxInformation|2|6|X
|epo:Candidate|0|0|
|epo-ful:TransportMeansOperator|0|1|X
|epo-ful:AbstractContainer|3|12|X
|epo-ful:TemperatureSpecification|1|3|X
|epo:Project|1|1|
|epo:SelectedCandidateList|2|2|
|epo:MiniCompetitionAwardOutcome|1|1|
|epo:ElectronicSignature|1|1|
|epo:AdHocChannel|0|0|
|epo-con:Deliverable|0|2|X
|epo-ord:Order|9|23|X
|epo-sub:LegalRepresentative|2|3|X
|epo-sub:Mandate|0|0|
|epo-sub:PowerOfAttorney|0|0|
|epo:ProfessionalSuitabilitySummary|3|3|
|epo:EconomicStandingSummary|0|0|
|epo:TechnicalAbilitySummary|0|0|
|epo:QualificationCriteriaSummary|2|2|
|epo:QualificationCriterion|1|1|
|epo-sub:CertificateInformation|2|3|X

[source](./checkMissingExports.js) 2024-07-16T07:06:35.425Z
