reviews/4.2.0-rc.2/missingShacl/missingPropsSummaryCounts.md

# Missing SHACL properties

The following is a comparison between the SHACL properties generated by Model2Owl with the properties expressed in the Enterprise architect file.

## Comparison between

- database: assets/ePO/feature/4.2.0-rc.2/analysis_and_design/conceptual_model/ePO_CM.qea
- files: assets/ePO/feature/4.2.0-rc.2/implementation/**/*.{ttl,rdf}

## Files

- assets/ePO/feature/4.2.0-rc.2/implementation/eSubmission/shacl_shapes/eSubmission_shapes.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eSubmission/shacl_shapes/eSubmission_shapes.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eSubmission/owl_ontology/eSubmission_restrictions.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eSubmission/owl_ontology/eSubmission_restrictions.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eSubmission/owl_ontology/eSubmission.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eSubmission/owl_ontology/eSubmission.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/ePO_core/shacl_shapes/ePO_core_shapes.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/ePO_core/shacl_shapes/ePO_core_shapes.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/ePO_core/owl_ontology/ePO_core_restrictions.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/ePO_core/owl_ontology/ePO_core_restrictions.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/ePO_core/owl_ontology/ePO_core.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/ePO_core/owl_ontology/ePO_core.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eOrdering/shacl_shapes/eOrdering_shapes.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eOrdering/shacl_shapes/eOrdering_shapes.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eOrdering/owl_ontology/eOrdering_restrictions.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eOrdering/owl_ontology/eOrdering_restrictions.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eOrdering/owl_ontology/eOrdering.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eOrdering/owl_ontology/eOrdering.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eNotice/shacl_shapes/eNotice_shapes.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eNotice/shacl_shapes/eNotice_shapes.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eNotice/owl_ontology/eNotice_restrictions.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eNotice/owl_ontology/eNotice_restrictions.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eNotice/owl_ontology/eNotice.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eNotice/owl_ontology/eNotice.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eInvoicing/shacl_shapes/eInvoicing_shapes.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eInvoicing/shacl_shapes/eInvoicing_shapes.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eInvoicing/owl_ontology/eInvoicing_restrictions.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eInvoicing/owl_ontology/eInvoicing_restrictions.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eInvoicing/owl_ontology/eInvoicing.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eInvoicing/owl_ontology/eInvoicing.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eFulfilment/shacl_shapes/eFulfilment_shapes.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eFulfilment/shacl_shapes/eFulfilment_shapes.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eFulfilment/owl_ontology/eFulfilment_restrictions.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eFulfilment/owl_ontology/eFulfilment_restrictions.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eFulfilment/owl_ontology/eFulfilment.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eFulfilment/owl_ontology/eFulfilment.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eContract/shacl_shapes/eContract_shapes.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eContract/shacl_shapes/eContract_shapes.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eContract/owl_ontology/eContract_restrictions.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eContract/owl_ontology/eContract_restrictions.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eContract/owl_ontology/eContract.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eContract/owl_ontology/eContract.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eCatalogue/shacl_shapes/eCatalogue_shapes.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eCatalogue/shacl_shapes/eCatalogue_shapes.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eCatalogue/owl_ontology/eCatalogue_restrictions.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eCatalogue/owl_ontology/eCatalogue_restrictions.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eCatalogue/owl_ontology/eCatalogue.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eCatalogue/owl_ontology/eCatalogue.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eAccess/shacl_shapes/eAccess_shapes.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eAccess/shacl_shapes/eAccess_shapes.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eAccess/owl_ontology/eAccess_restrictions.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eAccess/owl_ontology/eAccess_restrictions.rdf
- assets/ePO/feature/4.2.0-rc.2/implementation/eAccess/owl_ontology/eAccess.ttl
- assets/ePO/feature/4.2.0-rc.2/implementation/eAccess/owl_ontology/eAccess.rdf

## SHACL - Property shapes per class

- Model2Owl: Number of property shapes produced from XMI with Model2Owl 
- EAP: Number of property shapes produced directly from the EAP file
- [details.json](./details.json)

| Class | Model2Owl | EAP | Mismatch |
|-------|--------|----------|--------|
|epo:RequestForClarification|0|0|
|epo-sub:ESPD|2|3|X
|epo-inv:CreditNoteLine|2|1|X
|epo:ExpressionOfInterest|6|3|X
|epo:RequestForParticipation|0|0|
|epo:Estimate|0|0|
|epo:SubcontractingEstimate|12|6|X
|epo:ConcessionEstimate|8|4|X
|epo-ord:Originator|0|0|
|epo-ful:Carrier|0|0|
|epo-ord:OrderResponse|10|7|X
|epo:AwardOutcome|10|5|X
|epo:AccessTerm|22|11|X
|epo:AwardCriterion|8|4|X
|epo:AwardDecision|6|3|X
|epo:Business|6|3|X
|epo:Buyer|14|7|X
|epo:LotSpecificTerm|0|0|
|epo:CentralPurchasingBody|0|0|
|epo:Contract|26|15|X
|epo:Contractor|6|3|X
|epo:ContractTerm|44|22|X
|epo:DesignContestRegimeTerm|12|6|X
|epo:DirectAwardTerm|8|4|X
|epo:Document|32|16|X
|epo:DynamicPurchaseSystemTechnique|2|1|X
|epo:EAuctionTechnique|0|0|
|epo:OfferingParty|0|0|
|epo:AcquiringCentralPurchasingBody|0|0|
|epo:ReviewRequester|0|0|
|epo-ful:DespatchAdvice|14|11|X
|epo-not:PreMarketConsultationNotice|0|0|
|epo:EvaluationTerm|0|0|
|epo:ExclusionGround|0|0|
|epo:FrameworkAgreement|2|1|X
|epo:FrameworkAgreementTechnique|0|0|
|epo:FrameworkAgreementTerm|8|4|X
|epo:Fund|10|5|X
|epo:CatalogueReceiver|0|0|
|epo:CatalogueProvider|0|0|
|epo:AwardingCentralPurchasingBody|0|0|
|epo:ContractLotCompletionInformation|10|5|X
|epo:GreenProcurement|6|3|X
|epo:InnovativeProcurement|2|1|X
|epo:Lot|4|2|X
|epo:LotGroup|20|10|X
|epo:Mediator|0|0|
|epo:MultipleStageProcedureTerm|16|8|X
|epo:Notice|28|14|X
|epo:OpeningTerm|8|4|X
|epo:OrganisationGroup|6|3|X
|epo:VehicleInformation|12|6|X
|epo:NonPublishedInformation|10|5|X
|epo-con:ContractModificationInformation|6|5|X
|epo-con:ContractAmendment|0|2|X
|epo:Period|6|3|X
|epo:PlannedProcurementPart|8|4|X
|epo:SelectionEvaluationTerm|0|0|
|epo:AwardEvaluationTerm|10|5|X
|epo:ReviewTerm|10|5|X
|epo-ord:OrderResponseInformation|4|3|X
|epo-cat:PostAwardDocument|2|2|
|epo:Prize|4|2|X
|epo:Procedure|24|12|X
|epo-cat:Catalogue|6|9|X
|epo:ParticipationRequestTerm|4|2|X
|epo-not:VoluntaryEx-AnteTransparencyNotice|0|0|
|epo-not:PIN-CFCStandardNotice|0|0|
|epo-not:PIN-CFCSocialNotice|0|0|
|epo-not:QSNotice|0|0|
|epo-not:CNStandardNotice|0|0|
|epo-not:CNSocialNotice|0|0|
|epo-not:DesignContestNotice|0|0|
|epo-not:CANStandardNotice|0|0|
|epo:ProcedureTerm|26|13|X
|epo:ProcurementCriterion|10|5|X
|epo:TenderGroup|12|6|X
|epo:Duration|0|0|
|epo-ord:Consignee|0|0|
|epo:ProcurementDocument|0|0|
|epo:ProcurementServiceProvider|2|1|X
|epo-cat:CatalogueLine|24|16|X
|epo:ProcedureSpecificTerm|0|0|
|epo-cat:ItemRequirement|0|0|
|epo:NonDisclosureAgreementTerm|4|2|X
|epo:PurchaseContract|4|2|X
|epo:Purpose|6|3|X
|epo:Reviewer|2|1|X
|epo:SecurityClearanceTerm|6|3|X
|epo:SelectionCriterion|6|3|X
|epo:SocialProcurement|2|1|X
|epo:StatisticalInformation|0|0|
|epo:StrategicProcurement|6|3|X
|epo:Subcontractor|0|0|
|epo:SubcontractTerm|14|7|X
|epo:SubmissionTerm|48|24|X
|epo:System|4|2|X
|epo:TechnicalSpecification|0|0|
|epo:Technique|6|3|X
|epo:Tenderer|2|1|X
|epo:Tender|24|13|X
|epo:MonetaryValue|10|5|X
|epo:Winner|2|1|X
|epo-cat:Item|40|30|X
|epo:JuryMember|2|1|X
|epo:ProcurementProcedureInformationProvider|0|0|
|epo-not:PlanningNotice|0|2|X
|epo-not:CompetitionNotice|0|4|X
|epo:Quantity|6|3|X
|epo-not:DirectAwardPrenotificationNotice|0|8|X
|epo-not:ResultNotice|0|9|X
|epo-not:ContractModificationNotice|0|9|X
|epo-not:CompletionNotice|0|10|X
|epo-ful:Despatcher|0|0|
|epo-ord:Seller|0|0|
|epo-not:PINProfileNotice|0|0|
|epo-not:PINOnlyNotice|0|0|
|epo-not:PINTimeLimitNotice|0|0|
|epo-ful:ShipmentInformation|6|8|X
|epo:OriginatorRequest|0|0|
|epo-not:CANSocialNotice|0|0|
|epo-not:DesignContestResultNotice|0|0|
|epo-not:Notice10|0|0|
|epo-ful:TransportHandlingUnit|10|5|X
|epo-not:Notice25|0|0|
|epo-not:Notice27|0|0|
|epo-not:Notice28|0|0|
|epo-not:Notice29|0|0|
|epo-not:Notice30|0|0|
|epo-not:Notice31|0|0|
|epo-not:Notice32|0|0|
|epo-not:Notice33|0|0|
|epo-not:Notice34|0|0|
|epo-not:Notice35|0|0|
|epo-not:Notice36|0|0|
|epo-not:Notice37|0|0|
|epo-not:Notice12|0|0|
|epo-not:Notice13|0|0|
|epo-not:Notice14|0|0|
|epo-not:Notice15|0|0|
|epo-not:Notice16|0|0|
|epo-not:Notice17|0|0|
|epo-not:Notice18|0|0|
|epo-not:Notice19|0|0|
|epo-not:Notice20|0|0|
|epo-not:Notice21|0|0|
|epo-not:Notice22|0|0|
|epo-not:Notice23|0|0|
|epo-not:Notice24|0|0|
|epo-not:Notice38|0|0|
|epo-not:Notice39|0|0|
|epo-not:Notice40|0|0|
|epo-not:Notice1|0|0|
|epo-not:Notice2|0|0|
|epo-not:Notice3|0|0|
|epo-not:Notice4|0|0|
|epo-not:Notice5|0|0|
|epo-not:Notice6|0|0|
|epo-not:Notice7|0|0|
|epo-not:Notice8|0|0|
|epo-not:Notice9|0|0|
|epo-not:VEAT-D24|0|0|
|epo-not:Modification-D24|0|0|
|epo-not:SocialAndOtherSpecificServices-D24|0|0|
|epo-not:PINOnly-D25|0|0|
|epo-not:CNSocial-D25|0|0|
|epo-not:CANSocial-D25|0|0|
|epo-not:QS-D25|0|0|
|epo-not:PINProfile-D25|0|0|
|epo-not:DesignContest-D25|0|0|
|epo-not:DesignContestResult-D25|0|0|
|epo-not:VEAT-D25|0|0|
|epo-not:StandardForm|0|0|
|epo-not:eFormsNotice|0|0|
|epo-not:Notice11|0|0|
|epo:PaymentExecutor|0|0|
|epo:ParticipationRequestProcessor|0|0|
|epo:ParticipationRequestReceiver|0|0|
|epo:TenderReceiver|0|0|
|epo:TenderProcessor|0|0|
|epo:OfflineAccessProvider|0|0|
|epo:ReviewProcedureInformationProvider|0|0|
|epo-ful:DespatchLine|2|5|X
|epo-not:Modification-D25|0|0|
|epo-not:PIN-CFCSocialNotice-D25|0|0|
|epo-not:PIN-RTL-D24|0|0|
|epo-not:PIN-CFCStandard-D24|0|0|
|epo-not:PIN-RTL-D25|0|0|
|epo-not:PIN-CFCSocial-D25|0|0|
|epo-not:VEAT-D23|0|0|
|epo-not:Modification-D23|0|0|
|epo-not:SocialAndOtherSpecificServices-D23|0|0|
|epo-not:ConcessionNotice-D23|0|0|
|epo-not:ConcessionAwardNotice-D23|0|0|
|epo-not:PINOnly-D24|0|0|
|epo-not:CNStandard-D24|0|0|
|epo-not:CANStandard-D24|0|0|
|epo-not:PINProfile-D24|0|0|
|epo-not:DesignContest-D24|0|0|
|epo-not:DesignContestResult-D24|0|0|
|epo:Term|0|0|
|epo:TenderAwardOutcome|6|3|X
|epo:LotAwardOutcome|12|6|X
|epo:ReviewRequestSummary|6|3|X
|epo:LotGroupAwardInformation|6|3|X
|epo:NoticeAwardInformation|10|7|X
|epo:ReviewDecision|12|6|X
|epo-cat:ProductSpecification|0|0|
|epo:AgentInRole|12|6|X
|epo:TaxInformationProvider|0|0|
|epo:EmploymentInformationProvider|0|0|
|epo:EnvironmentalProtectionInformationProvider|0|0|
|epo:Awarder|0|0|
|epo:ReviewRequest|16|8|X
|epo:SubmissionStatisticalInformation|44|22|X
|epo-not:PINProfile-D81|0|0|
|epo-not:VEAT-D81|0|0|
|epo-not:PINDefence-D81|0|0|
|epo-not:CNDefence-D81|0|0|
|epo-not:CANDefence-D81|0|0|
|epo-not:Subcontract-D81|0|0|
|epo-not:StandardFormsNotice|0|0|
|epo-not:SubcontractNotice|0|0|
|epo-not:Notice26|0|0|
|epo-cat:ItemComposition|0|0|
|epo-cat:ItemProperty|10|6|X
|epo:ProcurementObject|32|16|X
|epo-cat:Price|4|11|X
|epo-ord:OrderLine|0|3|X
|epo-ord:AllowanceInformation|2|2|
|epo-cat:Manufacturer|0|1|X
|epo:ContextDescription|0|0|
|epo:ContextualProjection|0|0|
|epo-cat:Batch|8|5|X
|epo-cat:Brand|2|1|X
|epo-cat:ItemModel|2|1|X
|epo-not:QSNotice-D25|0|0|
|epo-not:CNSocialNotice-D25|0|0|
|epo-not:CANSocialNotice-D25|0|0|
|epo-acc:ESPDRequest|0|3|X
|epo:ChangeInformation|18|9|X
|epo:ReviewObject|6|3|X
|epo:ReviewIrregularitySummary|4|2|X
|epo-ful:ReceiptAdvice|8|8|
|epo-ful:ReceiptAdviceLine|8|8|
|epo-sub:NationalPreQualificationData|2|5|X
|epo-cat:CatalogueResponse|6|5|X
|epo-cat:CatalogueResponseLine|2|2|
|epo-cat:CatalogueResponseInformation|2|2|
|epo:ContractSpecificTerm|0|0|
|epo:ConcessionContract|0|0|
|epo-cat:ItemReplacement|0|0|
|epo:BudgetProvider|0|0|
|epo:ProcessPlanningTerm|6|3|X
|epo-cat:ItemRelation|4|2|X
|epo-cat:ItemAccessoryRelation|0|0|
|epo-cat:ItemComplementaryRelation|0|0|
|epo:ProcurementProcessInformation|10|5|X
|epo:CertificationLabel|4|2|X
|epo:Certifier|0|0|
|epo:Certificate|6|3|X
|epo-cat:ChargeInformation|0|2|X
|epo-ord:DeliveryInformation|14|10|X
|epo:AcquiringParty|0|0|
|epo:AuxiliaryParty|0|0|
|epo:OtherEntity|0|0|
|epo:SpecificDuration|4|2|X
|epo:IndefiniteDuration|0|0|
|epo-ord:OrderResponseLine|2|1|X
|epo:ProcurementElement|12|6|X
|epo:LeadBuyer|0|0|
|epo-ord:ContractInformation|2|2|
|epo-ord:AllowanceChargeInformation|6|6|
|epo-ord:OriginatorInformation|4|3|X
|epo-ful:NotificationReceiver|0|0|
|epo-inv:Invoice|24|36|X
|epo-ord:DeliveryAgreement|2|2|
|epo:DirectContract|2|1|X
|epo:AwardCriteriaSummary|0|0|
|epo-inv:InvoiceLine|2|8|X
|epo-ful:Consignment|32|35|X
|epo-ful:FreightForwarder|0|0|
|epo-ful:Notifier|0|0|
|epo-ful:TransportEquipment|14|8|X
|epo-ful:Package|8|4|X
|epo-ful:ShipmentStage|10|6|X
|epo-ful:TransportMeans|6|5|X
|epo-ful:TransportEquipmentSeal|0|1|X
|epo-ful:ShipmentAgreement|0|2|X
|epo:OfferIssuer|2|1|X
|epo-cat:Line|6|4|X
|epo-cat:InformationHub|2|1|X
|epo:ParticipationCondition|2|1|X
|epo:ProcurementCriteriaSummary|2|1|X
|epo:ParticipationConditionsSummary|6|3|X
|epo:ExclusionGroundsSummary|0|0|
|epo:SelectionCriteriaSummary|4|2|X
|epo:Offer|0|0|
|epo-ful:GoodsItem|2|3|X
|epo-ord:TaxInformation|4|6|X
|epo-inv:Payee|0|0|
|epo-inv:SellerTaxRepresentative|0|0|
|epo-inv:PaymentInstructionsInformation|10|8|X
|epo-inv:CreditTransferInformation|2|3|X
|epo-inv:InvoiceNote|4|2|X
|epo:Candidate|0|0|
|epo-ful:TransportMeansOperator|0|1|X
|epo-ful:AbstractContainer|6|12|X
|epo-ful:TemperatureSpecification|2|3|X
|epo:Project|2|1|X
|epo-inv:PaymentCardInformation|4|2|X
|epo-inv:TaxBreakdownInformation|4|3|X
|epo:SelectedCandidateList|4|2|X
|epo:MiniCompetitionAwardOutcome|2|1|X
|epo-sub:Response|2|5|X
|epo:ElectronicSignature|2|1|X
|epo:AdHocChannel|0|0|
|epo-con:Deliverable|0|2|X
|epo-ord:Order|18|24|X
|epo-sub:LegalRepresentative|4|3|X
|epo-sub:Mandate|0|0|
|epo-sub:PowerOfAttorney|0|0|
|epo:ProfessionalSuitabilitySummary|6|3|X
|epo:EconomicStandingSummary|0|0|
|epo:TechnicalAbilitySummary|0|0|
|epo:QualificationCriteriaSummary|4|2|X
|epo:QualificationCriterion|2|1|X
|epo-sub:CertificateInformation|4|3|X
|epo-inv:CreditNote|4|2|X
|epo-not:NoticeE1|0|0|
|epo-not:NoticeE2|0|0|
|epo-not:NoticeT01|0|0|
|epo-not:NoticeCEI|0|0|
|epo-not:NoticeE3|0|0|
|epo-not:NoticeE4|0|0|
|epo-not:NoticeT02|0|0|
|epo-not:NoticeE5|0|0|

[source](./checkMissingExports.js) 2024-11-19T09:37:40.343Z
